<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgrd_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:id="@+id/cardviewInfo"
        android:layout_height="wrap_content"
        app:cardCornerRadius="29dp"
        android:layout_below="@id/dist"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/rating_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rating_box" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="Clinic Information"
        android:textColor="@color/fontColor"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:fontFamily="@font/lato_regular"
        android:textSize="15dp"
        android:layout_alignLeft="@+id/title_info"
        android:layout_below="@id/title_info"
        />

    <Button
        android:id="@+id/som"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/title_info"
        android:layout_alignRight="@+id/submit_rating"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/show_on_map"
        android:onClick="text_msg"
        android:textColor="@color/purple"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:backgroundTint="@color/gray"
        android:elevation="15dp"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/avert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardviewInfo"
        android:layout_alignTop="@id/cardviewInfo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="17dp"
        android:elevation="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/avrt"
        android:textColor="@color/fontColor"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="40dp"
        android:fontFamily="@font/lato_bold"
        android:layout_alignTop="@id/avert"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="20dp"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/submit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit your rating"
        android:textSize="14dp"
        android:layout_alignBottom="@id/rating"
        android:layout_alignRight="@id/cardviewInfo"
        android:layout_marginRight="10dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/full_add"
        android:fontFamily="@font/lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Full address"
        android:textSize="17dp"
        android:layout_below="@id/cardviewInfo"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        />
    <TextView
        android:id="@+id/full_add2"
        android:fontFamily="@font/lato_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="13dp"
        android:layout_below="@id/full_add"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/open_hour"
        android:fontFamily="@font/lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Opening hour"
        android:textSize="17dp"
        android:layout_below="@id/full_add2"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/open_hour2"
        android:fontFamily="@font/lato_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opening_hours"
        android:textSize="13dp"
        android:layout_below="@id/open_hour"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/contact_num"
        android:fontFamily="@font/lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact number"
        android:textSize="17dp"
        android:layout_below="@id/open_hour2"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/contact_num2"
        android:fontFamily="@font/lato_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_number"
        android:textColor="@color/purple"
        android:textSize="13dp"
        android:layout_below="@id/contact_num"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/website"
        android:fontFamily="@font/lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Official website"
        android:textSize="17dp"
        android:layout_below="@id/contact_num2"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        />

    <TextView
        android:id="@+id/website2"
        android:fontFamily="@font/lato_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/purple"
        android:textSize="13dp"
        android:layout_below="@id/website"
        android:layout_alignLeft="@id/avert"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.1"
        android:isIndicator="false"
        android:elevation="5dp"
        android:progressTint="@color/pink"
        android:secondaryProgressTint="@color/pink"
        android:layout_above="@id/submit_rating"
        android:layout_alignEnd="@id/som"
        />


</RelativeLayout>